clusters/arcanis/matrix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: matrix
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: matrix
spec:
  selector:
    app: synapse
  ports:
  - port: 8008
    targetPort: 8008
---
apiVersion: v1
kind: Service
metadata:
  name: synapse-admin
  namespace: matrix
spec:
  selector:
    app: synapse-admin
  ports:
  - port: 80
    targetPort: 80
